--- a/src/styles/Nabvar.css
+++ b/src/styles/Nabvar.css
@@ -1,16 +1,44 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #001E63;
-    color: white;
-    padding: 10px;
-    border-bottom: 1px solid rgba(216, 216, 216, 0.781);
-  }
-  
-  .user-icon img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #001E63;
+  color: white;
+  padding: 10px;
+  border-bottom: 1px solid rgba(216, 216, 216, 0.781);
+}
+
+.user-icon {
+  display: flex;
+  align-items: center;
+}
+
+.user-icon img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.user-icon p {
+  margin: 0 10px;
+}
+
+.user-icon button {
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+  padding: 5px 10px;
+  font-size: 14px;
+}
+
+.user-icon button:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
+}
+
+/* Usamos visibility para ocultar sin alterar la estructura del layout */
+.hidden {
+  visibility
+}
